# cyclotron

./: Cargo.toml  README.md
examples/: calc.rs  collatz.rs
src/: bruteforce.rs  lazy_set.rs  lib.rs
