[package]
name = "cyclotron"
version = "0.0.2"
authors = ["Eduard-Mihai Burtescu <edy.burt@gmail.com>"]
edition = "2018"
repository = "https://github.com/LykenSol/cyclotron"
license = "MIT/Apache-2.0"
keywords = ["cache", "fixpoint", "memoization"]
readme = "README.md"
description = "Cycle-aware memoization with automatic fixpoints."

[dependencies]
